--- a/index.html
+++ b/index.html
@@ -1,1 +1,2 @@
 Hello World
+Welcome to my developer page. As a new developer this is just the beginning. In the future stay on the look out for projects that include a
