--- a/index.html
+++ b/index.html
@@ -1,2 +1,35 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <title>James Tanner</title>
+  <h1>Software Developer</h1>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+</head>
+<body>
 
+<div class="container">
+    <h2>Do not go gentle into that good night. Rage, rage against the dying of the light.
+        Dylan Thomas</h2>
+</div>
+
+</body>
+
+<head>
+  <title>
+    James Tanner
+  </title>
+</head>
+<body>
+    <video width="320" height="240" autoplay>
+        <source src="https://www.videvo.net/videvo_files/converted/2018_01/preview/171124_H1_006.mp491073.webm" type="video/mp4">
+
+      Your browser does not support the video tag.
+      </video>
+<h2>Do not go gentle into that good night. Rage, rage against the dying of the light.
+Dylan Thomas</h2>
+</body>
+</html>
