--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <body>
-    <video width="320" height="240" autoplay>
+    <video width="320" height="240" controls loop autoplay>
         <source src="https://www.videvo.net/videvo_files/converted/2018_01/preview/171124_H1_006.mp491073.webm" type="video/mp4">
 
       Your browser does not support the video tag.
