--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <body>
-    <video controls loop width="320" height="240" autoplay>
+  <div class="beachVideo">
+    <video controls loop width=devive-width height="240" autoplay>
         <source src="https://www.videvo.net/videvo_files/converted/2018_01/preview/171124_H1_006.mp491073.webm" type="video/mp4">
 
       Your browser does not support the video tag.
       </video>
-</body>
+  </div>
+<div class="Headliner">
   <h1>James Tanner</h1>
   <h3>Software Developer</h3>
   <meta charset="utf-8">
@@ -16,11 +17,13 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
-<body>
+  <div class = "myPic">
+       	<picture>
+          <source media="(min-width: 650px)" srcset="https://media.licdn.com/dms/image/C5603AQFaqu5OUTa8qQ/profile-displayphoto-shrink_200_200/0?e=1536796800&v=beta&t=qO6TVSW8raZC-fESE6js5k3RZk7v2U7S6JpCHhMBsYQ">
+        </picture>
 <div class="container">
     <h2>Do not go gentle into that good night. Rage, rage against the dying of the light.
      -Dylan Thomas</h2>
 </div>
 
-</body>
 </html>
