--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
   <div class = "myPic">
-       	<picture>
-          <source media="(min-width: 650px)" srcset="https://media.licdn.com/dms/image/C5603AQFaqu5OUTa8qQ/profile-displayphoto-shrink_200_200/0?e=1536796800&v=beta&t=qO6TVSW8raZC-fESE6js5k3RZk7v2U7S6JpCHhMBsYQ">
-        </picture>
+       	
+          <img class ="myPic" src="https://media.licdn.com/dms/image/C5603AQFaqu5OUTa8qQ/profile-displayphoto-shrink_200_200/0?e=1536796800&v=beta&t=qO6TVSW8raZC-fESE6js5k3RZk7v2U7S6JpCHhMBsYQ">
+  
 <div class="container">
     <h2>Do not go gentle into that good night. Rage, rage against the dying of the light.
      -Dylan Thomas</h2>
