--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
   <div class = "myPic">
-       	
-          <img class ="myPic" src="https://media.licdn.com/dms/image/C5603AQFaqu5OUTa8qQ/profile-displayphoto-shrink_200_200/0?e=1536796800&v=beta&t=qO6TVSW8raZC-fESE6js5k3RZk7v2U7S6JpCHhMBsYQ">
+       	  <c:url var = "myPicUrl" value = ""https://media.licdn.com/dms/image/C5603AQFaqu5OUTa8qQ/profile-displayphoto-shrink_200_200/0?e=1536796800&v=beta&t=qO6TVSW8raZC-fESE6js5k3RZk7v2U7S6JpCHhMBsYQ">"/>
+          <img src="${myPicUrl}">
   
 <div class="container">
     <h2>Do not go gentle into that good night. Rage, rage against the dying of the light.
