--- a/index.html
+++ b/index.html
@@ -34,21 +34,24 @@
 National Park Reservation System - Java application utilizing PostgresSQL for a digital reservation system
 capstone
 </p>
+    <div class="Education">
     <h2>Education</h2>
-    <p>< TECH ELEVATOR| JAVA BOOTCAMP                                                                                 AUG 2018
+    <p>< TECH ELEVATOR| JAVA BOOTCAMP                                                                           AUG 2018
 Object Oriented Programming: Java
 Web Application Development: HTML, CSS, Javascript, jQuery, Servlets, JSP, Spring Web MVC, Tomcat
 Database Programming: JDBC, table design and creation, SQL queries and DML, PostgreSQL, E/R diagrams
 Development tools and techniques: Agile, unit testing (JUnit), integration testing, TDD, unix command line navigation, Git, Eclipse
 
-CASE WESTERN RESERVE UNIVERSITY | MBA                                                                          2017
+CASE WESTERN RESERVE UNIVERSITY | MBA                                                                               2017
 3.68 GPA 
 Completed coursework in financial management with project work in capital budgeting, capital structure, and mergers and acquisitions analysis 
 Completed advanced course work in innovation strategy model analysis, conjoint analysis, and legal frameworks to protect innovation strategy 
 Completed projects working on maximizing brand positioning through creation of new products, R&D allocation, commercial team allocation/creation, and allocation of advertising funds for use across multiple product spectrum 
 
-UNIVERSITY OF PHOENIX | B.S MANAGEMENT                                                                       2015
-/p>
+UNIVERSITY OF PHOENIX | B.S MANAGEMENT                                                                               2015
+</p>
+</div>
+   <div class="Accomplishments">
       <h2>ACCOMPLISHMENTS & PROFICIENCIES </h2>
       <p>3-time Winner, Coast Guard Meritorious Team Award  
          Recipient, Commandant Letter of Commendation, 2014 
@@ -56,20 +59,22 @@ UNIVERSITY OF PHOENIX | B.S MANAGEMENT                                          
          Salesforce proficient
          Cleared for Secret Information based on a Single Scope Background, 2011
 </p>
+    </div>
+    <div class="Experience">
       <h2>Experience </h2>
-      <p>FOUNDER | FAMILY PASS (STARTUP)                                                          AUG 2016-MAY 2018 
+      <p>FOUNDER | FAMILY PASS (STARTUP)                                                                AUG 2016-MAY 2018 
 Lakewood Ideation Winner (Pitch Competition) 
 Produced, organized and maintained internal and external sales and marketing materials like presentation decks, competitive intelligence and contact lists 
 Conducted market analysis utilizing surveys, in person interviews, and research techniques to determine product attributes needed for a commercially viable product 
 Conducted research to identify new markets and industry sectors, conducting in-depth business analysis to identify new competitive opportunities 
 
-OWNER ADVISOR | TESLA                                                                                 APR 2015- DEC 2016 
+OWNER ADVISOR | TESLA                                                                                   APR 2015- DEC 2016 
 Led New England region in total sales for Q1 2016 and 3rd in region for YTD sales 
 Top 2 sales advisor in New England Region with a 47% close rate  
 Developed and mentored 3 Product Specialists on career plans that led to their promotions as fellow Owner Advisors and a Service Advisor 
 Developed, created, and executed event planning, marketing programs, sales growth presentations aimed at increasing company exposure, increasing retail traffic; led to increased store sales 
 
-FIREMAN | UNITED STATES COAST GUARD                                              OCT 2010- APR 2015 
+FIREMAN | UNITED STATES COAST GUARD                                                                     OCT 2010- APR 2015 
 Conducted Search and Rescue operations under life-critical time constraints and unpredictable weather patterns 
 Created and implemented unit physical readiness plans and equipment purchases as the Unit Health Promotions Coordinator  
 Trained in United States Coast Guard Rescue Swimmer Unit in Detroit, MI  
@@ -77,4 +82,6 @@ Performed daily and emergency maintenance on all Coast Guard Assets adhering to 
 Led the Cleveland area’s “Coast Guard Run to Remember” team to raise money for service members and their families in honor of fallen heroes 
  
 </p>
+    </div>
+</div>
 </html>
