--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
   <div class = "myPic">
-       	  <c:url var = "myPicUrl" value = ""https://media.licdn.com/dms/image/C5603AQFaqu5OUTa8qQ/profile-displayphoto-shrink_200_200/0?e=1536796800&v=beta&t=qO6TVSW8raZC-fESE6js5k3RZk7v2U7S6JpCHhMBsYQ">"/>
+       	  <c:url var = "myPicUrl" value = ""https://media.licdn.com/dms/image/C5603AQFaqu5OUTa8qQ/profile-displayphoto-shrink_200_200/0?e=1536796800&v=beta&t=qO6TVSW8raZC-fESE6js5k3RZk7v2U7S6JpCHhMBsYQ"/>
           <img src="${myPicUrl}">
   
 <div class="container">
@@ -36,7 +36,7 @@ capstone
 </p>
     <div class="Education">
     <h2>Education</h2>
-    <p>< TECH ELEVATOR| JAVA BOOTCAMP                                                                           AUG 2018
+    <p> TECH ELEVATOR| JAVA BOOTCAMP                                                                           AUG 2018
 Object Oriented Programming: Java
 Web Application Development: HTML, CSS, Javascript, jQuery, Servlets, JSP, Spring Web MVC, Tomcat
 Database Programming: JDBC, table design and creation, SQL queries and DML, PostgreSQL, E/R diagrams
