--- a/index.html
+++ b/index.html
@@ -17,9 +17,11 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
+  </div>
   <div class = "myPic">
        	  <c:url var = "myPicUrl" value = ""https://media.licdn.com/dms/image/C5603AQFaqu5OUTa8qQ/profile-displayphoto-shrink_200_200/0?e=1536796800&v=beta&t=qO6TVSW8raZC-fESE6js5k3RZk7v2U7S6JpCHhMBsYQ"/>
           <img src="${myPicUrl}">
+                                </div>
   
 <div class="container">
     <h2>Do not go gentle into that good night. Rage, rage against the dying of the light.
