--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 </head>
   </div>
   <div class = "myPic">
-       	  <c:url var = "myPicUrl" value = ""https://media.licdn.com/dms/image/C5603AQFaqu5OUTa8qQ/profile-displayphoto-shrink_200_200/0?e=1536796800&v=beta&t=qO6TVSW8raZC-fESE6js5k3RZk7v2U7S6JpCHhMBsYQ"/>
-          <img src="${myPicUrl}">
-                                </div>
+       	  <c:url var = "myPicUrl" value = "https://media.licdn.com/dms/image/C5603AQFaqu5OUTa8qQ/profile-displayphoto-shrink_200_200/0?e=1536796800&v=beta&t=qO6TVSW8raZC-fESE6js5k3RZk7v2U7S6JpCHhMBsYQ"/>
+          <img src="${myPicUrl}"/>
+  </div>
   
 <div class="container">
     <h2>Do not go gentle into that good night. Rage, rage against the dying of the light.
