--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ Conducted Search and Rescue operations under life-critical time constraints and 
 Created and implemented unit physical readiness plans and equipment purchases as the Unit Health Promotions Coordinator  
 Trained in United States Coast Guard Rescue Swimmer Unit in Detroit, MI  
 Performed daily and emergency maintenance on all Coast Guard Assets adhering to strict maintenance procedures to ensure mission readiness  
-Led the Cleveland area’s “Coast Guard Run to Remember” team to raise money for service members and their families in honor of fallen heroes 
+Led the Cleveland area's “Coast Guard Run to Remember” team to raise money for service members and their families in honor of fallen heroes 
  
 </p>
     </div>
