--- a/index.html
+++ b/index.html
@@ -22,8 +22,11 @@
        	  <c:url var = "myPicUrl" value = "https://media.licdn.com/dms/image/C5603AQFaqu5OUTa8qQ/profile-displayphoto-shrink_200_200/0?e=1536796800&v=beta&t=qO6TVSW8raZC-fESE6js5k3RZk7v2U7S6JpCHhMBsYQ"/>
           <img src="${myPicUrl}"/>
   </div>
-  
-<div class="container">
+  <div class ="triPic">
+          <c:url var "triPicUrl" value = "https://scontent-lga3-1.xx.fbcdn.net/v/t1.0-9/602010_334661896669338_79276051_n.jpg?_nc_cat=0&oh=256760ec5211c858a1747e2de3ac7374&oe=5BE66E40"/>
+          <img src="${triPicUrl}"/>
+  </div>
+ <div class="container">
     <h2>Do not go gentle into that good night. Rage, rage against the dying of the light.
      -Dylan Thomas</h2>
 </div>
@@ -86,4 +89,5 @@ Led the Cleveland area's “Coast Guard Run to Remember” team to raise money f
 </p>
     </div>
 </div>
+  <
 </html>
