--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
           <img src="${cgHeloPicUrl}"/>
   </div>
  <div class="container">
-    <h2>Do not go gentle into that good night. Rage, rage against the dying of the light.
-     -Dylan Thomas</h2>
+    <h2><strong>"Do not go gentle into that good night. Rage, rage against the dying of the light."
+      -Dylan Thomas</strong></h2>
 </div>
 <div class="Resume">
   <div class="Summary">
