--- a/index.html
+++ b/index.html
@@ -19,20 +19,20 @@
 </head>
   </div>
   <div class = "myPic">
-       	  <c:url var = "myPicUrl" value = "https://media.licdn.com/dms/image/C5603AQFaqu5OUTa8qQ/profile-displayphoto-shrink_200_200/0?e=1536796800&v=beta&t=qO6TVSW8raZC-fESE6js5k3RZk7v2U7S6JpCHhMBsYQ"/>
+       	  <c:url var="myPicUrl" value="https://media.licdn.com/dms/image/C5603AQFaqu5OUTa8qQ/profile-displayphoto-shrink_200_200/0?e=1536796800&v=beta&t=qO6TVSW8raZC-fESE6js5k3RZk7v2U7S6JpCHhMBsYQ"/>
           <img src="${myPicUrl}"/>
   </div>
   <div class ="triPic">
-          <c:url var "triPicUrl" value = "https://scontent-lga3-1.xx.fbcdn.net/v/t1.0-9/602010_334661896669338_79276051_n.jpg?_nc_cat=0&oh=256760ec5211c858a1747e2de3ac7374&oe=5BE66E40"/>
+          <c:url var="triPicUrl" value="https://scontent-lga3-1.xx.fbcdn.net/v/t1.0-9/602010_334661896669338_79276051_n.jpg?_nc_cat=0&oh=256760ec5211c858a1747e2de3ac7374&oe=5BE66E40"/>
           <img src="${triPicUrl}"/>
   </div>
   
    <div class ="follyPic">
-          <c:url var "follyPicUrl" value = "https://scontent-lga3-1.xx.fbcdn.net/v/t1.0-9/162992_1811137804777_3738713_n.jpg?_nc_cat=0&oh=15df3809fa4ff879f01da398910dd251&oe=5B9F2136"/>
+          <c:url var="follyPicUrl" value="https://scontent-lga3-1.xx.fbcdn.net/v/t1.0-9/162992_1811137804777_3738713_n.jpg?_nc_cat=0&oh=15df3809fa4ff879f01da398910dd251&oe=5B9F2136"/>
           <img src="${follyPicUrl}"/>
   </div>
    <div class ="cgHeloPic">
-          <c:url var "cgHeloPicUrl" value = "https://scontent-lga3-1.xx.fbcdn.net/v/t1.0-9/427128_10100178401164822_1627678825_n.jpg?_nc_cat=0&oh=a6400d2df628fcb63032267d11b56c19&oe=5BE04144"/>
+          <c:url var="cgHeloPicUrl" value="https://scontent-lga3-1.xx.fbcdn.net/v/t1.0-9/427128_10100178401164822_1627678825_n.jpg?_nc_cat=0&oh=a6400d2df628fcb63032267d11b56c19&oe=5BE04144"/>
           <img src="${cgHeloPicUrl}"/>
   </div>
  <div class="container">
