--- a/index.html
+++ b/index.html
@@ -28,8 +28,7 @@
   </div>
   
    <div class ="follyPic">
-          <c:url var="follyPicUrl" value="https://scontent-lga3-1.xx.fbcdn.net/v/t1.0-9/162992_1811137804777_3738713_n.jpg?_nc_cat=0&oh=15df3809fa4ff879f01da398910dd251&oe=5B9F2136"/>
-          <img src="${follyPicUrl}"/>
+          <img src="https://scontent-lga3-1.xx.fbcdn.net/v/t1.0-9/162992_1811137804777_3738713_n.jpg?_nc_cat=0&oh=15df3809fa4ff879f01da398910dd251&oe=5B9F2136"/>
   </div>
    <div class ="cgHeloPic">
           <c:url var="cgHeloPicUrl" value="https://scontent-lga3-1.xx.fbcdn.net/v/t1.0-9/427128_10100178401164822_1627678825_n.jpg?_nc_cat=0&oh=a6400d2df628fcb63032267d11b56c19&oe=5BE04144"/>
