--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </head>
   </div>
   <div class = "myPic">
-          <img src="https://media.licdn.com/dms/image/C5603AQFaqu5OUTa8qQ/profile-displayphoto-shrink_200_200/0?e=1536796800&v=beta&t=qO6TVSW8raZC-fESE6js5k3RZk7v2U7S6JpCHhMBsYQ"/>
+          <img src="https://media.licdn.com/dms/image/C5603AQFaqu5OUTa8qQ/profile-displayphoto-shrink_200_200/0?e=1536796800&v=beta&t=qO6TVSW8raZC-fESE6js5k3RZk7v2U7S6JpCHhMBsYQ" class="img-circle"/>
   </div>
   <div class ="triPic">
           <img src="https://scontent-lga3-1.xx.fbcdn.net/v/t1.0-9/602010_334661896669338_79276051_n.jpg?_nc_cat=0&oh=256760ec5211c858a1747e2de3ac7374&oe=5BE66E40"/>
