--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       Your browser does not support the video tag.
       </video>
   </div>
-<div class="Headliner">
+<div class="Headliner" text-center>
   <h1>James Tanner</h1>
   <h3>Software Developer</h3>
   <meta charset="utf-8">
