--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 <!-- First Container -->
 <div class="container-fluid bg-1 text-center">
   <h3 class="margin">JAMES TANNER</h3>
-  < <video controls loop width=devive-width height="240" autoplay>
+  < <video controls loop width=device-width height="240" autoplay>
         <source src="https://www.videvo.net/videvo_files/converted/2018_01/preview/171124_H1_006.mp491073.webm" type="video/mp4">
 
       Your browser does not support the video tag.
