--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#">WHO</a></li>
-        <li><a href="#">WHAT</a></li>
-        <li><a href="#">WHERE</a></li>
+        <li><a href="#">About Me</a></li>
+        <li><a href="#">Portfolio</a></li>
+        <li><a href="#">Contact Me</a></li>
       </ul>
     </div>
   </div>
@@ -77,11 +77,13 @@
 <!-- First Container -->
 <div class="container-fluid bg-1 text-center">
   <h3 class="margin">JAMES TANNER</h3>
-  < <video controls loop width=device-width height="240" autoplay>
+   <!-- 16:9 aspect ratio --> 
+<div class="embed-responsive embed-responsive-16by9"> 
+    <video width="320" height="240" controls loop autoplay>
         <source src="https://www.videvo.net/videvo_files/converted/2018_01/preview/171124_H1_006.mp491073.webm" type="video/mp4">
-
-      Your browser does not support the video tag.
-      </video>">
+          Your browser does not support the video tag.
+      </video>
+  </div>
   <h3>Software Developer</h3>
   <h3>"Do not go gentle into that good night. Rage, rage against the dying of the light."
       -Dylan Thomas</h3>
