--- a/index.html
+++ b/index.html
@@ -76,15 +76,16 @@
 
 <!-- First Container -->
 <div class="container-fluid bg-1 text-center">
-  <h3 class="margin">JAMES TANNER</h3>
-   <!-- 16:9 aspect ratio --> 
-<div class="embed-responsive embed-responsive-16by9"> 
-    <video width="320" height="240" controls loop autoplay>
+     <!-- 4:3 aspect ratio --> 
+<section class="embed-responsive embed-responsive-4by3"> 
+    <video width="320" height="240" loop autoplay>
         <source src="https://www.videvo.net/videvo_files/converted/2018_01/preview/171124_H1_006.mp491073.webm" type="video/mp4">
           Your browser does not support the video tag.
       </video>
-  </div>
-  <h3>Software Developer</h3>
+      
+          <h2 class="float-right">JAMES TANNER</h2>
+          <h3 class="float-right">Software Developer</h3>
+      </div>
   <h3>"Do not go gentle into that good night. Rage, rage against the dying of the light."
       -Dylan Thomas</h3>
 </div>
@@ -97,68 +98,72 @@
 
 <!-- Third Container (Grid) -->
 <div class="container-fluid bg-3 text-center">    
-  <h3 class="margin">Technical Projects</h3><br>
+  <h3 class="margin">Technical Projects</h3><br><ul>
   <div class="row">
     <div class="col-sm-4">
-      <p>Vending Machine Application - Java application for automated digital vending machine interface</p>
-      <p>National Park Reservation System - Java application utilizing PostgresSQL for a digital reservation system capstone</p>
+      <li>Vending Machine Application - Java application for automated digital vending machine interface</li>
+      <li>National Park Reservation System - Java application utilizing PostgresSQL for a digital reservation system capstone</li>
       <img src="https://media.licdn.com/dms/image/C5603AQFaqu5OUTa8qQ/profile-displayphoto-shrink_200_200/0?e=1536796800&v=beta&t=qO6TVSW8raZC-fESE6js5k3RZk7v2U7S6JpCHhMBsYQ" class="img-responsive margin" style="width:100%" alt="Image">
+    </ul>
     </div>
 <!-- Fourth Container-->
  <div class="container-fluid bg-4 text-center">    
-  <h3 class="margin">Education</h3><br>
+  <h3 class="margin">Education</h3><br><ul>
   <div class="row">
     <div class="col-sm-4">
       <h4>TECH ELEVATOR| JAVA BOOTCAMP AUG 2018</h4>
-      <p>Object Oriented Programming: Java </p>
-      <p>Web Application Development: HTML, CSS, Javascript, jQuery, Servlets, JSP, Spring Web MVC, Tomcat</p>
-      <p>Database Programming: JDBC, table design and creation, SQL queries and DML, PostgreSQL, E/R diagrams</p>
-      <p>Development tools and techniques: Agile, unit testing (JUnit), integration testing, TDD, unix command line navigation, Git, Eclipse</p>
-      <p></p>
+      <li>Object Oriented Programming: Java </li>
+      <li>Web Application Development: HTML, CSS, Javascript, jQuery, Servlets, JSP, Spring Web MVC, Tomcat</li>
+      <li>Database Programming: JDBC, table design and creation, SQL queries and DML, PostgreSQL, E/R diagrams</li>
+      <li>Development tools and techniques: Agile, unit testing (JUnit), integration testing, TDD, unix command line navigation, Git, Eclipse</li>
+      <br>
       <h4>CASE WESTERN RESERVE UNIVERSITY | MBA  2017<h4>
-      <p>3.68 GPA</p>
-      <p>Completed coursework in financial management with project work in capital budgeting, capital structure, and mergers and acquisitions analysis </p>
-      <p>Studied advanced course work in innovation strategy model analysis, conjoint analysis, and legal frameworks to protect innovation strategy</p>
-      <p>Executed corporate projects working on maximizing brand positioning through creation of new products, R&D allocation, commercial team allocation/creation, and allocation of advertising funds for use across multiple product spectrum </p>
-      <p></p>
+      <li>3.68 GPA</li>
+      <li>Completed coursework in financial management with project work in capital budgeting, capital structure, and mergers and acquisitions analysis </li>
+      <li>Studied advanced course work in innovation strategy model analysis, conjoint analysis, and legal frameworks to protect innovation strategy</li>
+      <li>Executed corporate projects working on maximizing brand positioning through creation of new products, RD allocation, commercial team allocation/creation, and allocation of advertising funds for use across multiple product spectrum </li>
+      <br>
       <h4>UNIVERSITY OF PHOENIX |  2015</h4>
+    </ul>
     </div>
 <!-- Fifth Container-->
  <div class="container-fluid bg-2 text-center">    
-  <h3 class="margin">ACCOMPLISHMENTS & PROFICIENCIES</h3><br>
+  <h3 class="margin">ACCOMPLISHMENTS  PROFICIENCIES</h3><br><ul>
   <div class="row">
     <div class="col-sm-4">
-      <p>3-time Winner, Coast Guard Meritorious Team Award</p>
-      <p>Recipient, Commandant Letter of Commendation,2014</p>
-      <p>2-time USA Triathlon National Qualifier</p>
-      <p>Salesforce proficient</p>
-      <p>Cleared for Secret Information based on a Single Scope Background, 2011</p> 
-      <img src="https://scontent-lga3-1.xx.fbcdn.net/v/t1.0-9/602010_334661896669338_79276051_n.jpg?_nc_cat=0&oh=256760ec5211c858a1747e2de3ac7374&oe=5BE66E40" class="img-responsive margin" style="width:100%" alt="Image">
-    </div>
+      <li>3-time Winner, Coast Guard Meritorious Team Award</li>
+      <li>Recipient, Commandant Letter of Commendation,2014</li>
+      <li>2-time USA Triathlon National Qualifier</li>
+      <li>Salesforce proficient</li>
+      <li>Cleared for Secret Information based on a Single Scope Background, 2011</li> 
+       <img src="https://scontent-lga3-1.xx.fbcdn.net/v/t1.0-9/602010_334661896669338_79276051_n.jpg?_nc_cat=0&oh=256760ec5211c858a1747e2de3ac7374&oe=5BE66E40" class="img-responsive margin" style="width:100%" alt="Image">
+      </ul>
+      </div>
 !-- Sixth Container-->
  <div class="container-fluid bg-3 text-center">    
-  <h3 class="margin">EXPERIENCE</h3><br>
+  <h3 class="margin">EXPERIENCE</h3><br><ul>
   <div class="row">
     <div class="col-sm-4">
       <h4>FOUNDER | FAMILY PASS (STARTUP)                                                          AUG 2016-MAY 2018</h4>
-      <p>Lakewood Ideation Winner (Pitch Competition) </p>
-      <p>Produced, organized and maintained internal and external sales and marketing materials like presentation decks, competitive intelligence and contact lists </p>
-      <p>Conducted market analysis utilizing surveys, in person interviews, and research techniques to determine product attributes needed for a commercially viable product </p>
-      <p>Conducted research to identify new markets and industry sectors, conducting in-depth business analysis to identify new competitive opportunities </p>
-      <p></p> 
+      <li>Lakewood Ideation Winner (Pitch Competition) </li>
+      <li>Produced, organized and maintained internal and external sales and marketing materials like presentation decks, competitive intelligence and contact lists </li>
+      <li>Conducted market analysis utilizing surveys, in person interviews, and research techniques to determine product attributes needed for a commercially viable product </li>
+      <li>Conducted research to identify new markets and industry sectors, conducting in-depth business analysis to identify new competitive opportunities </li>
+      <br>
       <h4>OWNER ADVISOR | TESLA                                                                    APR 2015- DEC 2016</h4>
-      <p>Led New England region in total sales for Q1 2016 and 3rd in region for YTD sales</p>
-      <p>Top 2 sales advisor in New England Region with a 47% close rate</p>
-      <p>Mentored, trained 3 Product Specialists on career plans that led to their promotions as fellow Owner Advisors and a Service Advisor</p>
-      <p>Developed, created, and executed event planning, marketing programs, sales growth presentations aimed at increasing company exposure, increasing retail traffic; led to increased store sales</p>
-      <p></p> 
+      <li>Led New England region in total sales for Q1 2016 and 3rd in region for YTD sales</li>
+      <li>Top 2 sales advisor in New England Region with a 47% close rate</li>
+      <li>Mentored, trained 3 Product Specialists on career plans that led to their promotions as fellow Owner Advisors and a Service Advisor</li>
+      <li>Developed, created, and executed event planning, marketing programs, sales growth presentations aimed at increasing company exposure, increasing retail traffic; led to increased store sales</li>
+      <br>
       <h4>FIREMAN | UNITED STATES COAST GUARD                                                      OCT 2010- APR 2015</h4>
-      <p>Conducted Search and Rescue operations under life-critical time constraints and unpredictable weather patterns</p>
-      <p>Created and implemented unit physical readiness plans and equipment purchases as the Unit Health Promotions Coordinator </p>
-      <p>Trained in United States Coast Guard Rescue Swimmer Unit in Detroit, MI</p>
-      <p>Performed daily and emergency maintenance on all Coast Guard Assets adhering to strict maintenance procedures to ensure mission readiness</p>
-      <p>Led the Cleveland area’s “Coast Guard Run to Remember” team to raise money for service members and their families in honor of fallen heroes </p>
-      <p></p> 
+      <li>Conducted Search and Rescue operations under life-critical time constraints and unpredictable weather patterns</li>
+      <li>Created and implemented unit physical readiness plans and equipment purchases as the Unit Health Promotions Coordinator </li>
+      <li>Trained in United States Coast Guard Rescue Swimmer Unit in Detroit, MI</p>
+      <li>Performed daily and emergency maintenance on all Coast Guard Assets adhering to strict maintenance procedures to ensure mission readiness</li>
+      <li>Led the Cleveland area’s “Coast Guard Run to Remember” team to raise money for service members and their families in honor of fallen heroes </li>
+      <br>
+    </ul>
       <div class ="cgHeloPic">
           <img src="https://scontent-lga3-1.xx.fbcdn.net/v/t1.0-9/427128_10100178401164822_1627678825_n.jpg?_nc_cat=0&oh=a6400d2df628fcb63032267d11b56c19&oe=5BE04144"/>
   </div> 
